--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start:stage": "sst start --stage stage",
     "test": "sst test",
     "start": "sst start",
     "build": "sst build",
