--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
     "@types/react": "^18.0.5",
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^18.0.1",
-    "react": "^18.0.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@serverless-stack/static-site-env": "^0.69.6",
+    "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.3.3"
   }
 }
