--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.5",
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^18.0.1",
+    "aws-amplify": "^4.3.20",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
