--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "sst test",
     "start": "sst start",
     "build": "sst build",
-    "deploy": "sst deploy",
+    "deploy": "sst deploy --stage stage",
     "remove": "sst remove"
   },
   "eslintConfig": {
